--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,8 @@
     border: 16px solid #f3f3f3;
     border-radius: 50%;
     border-top: 16px solid green;
-    width: 120px;
-    height: 120px;
+    width: 100px;
+    height: 100px;
     -webkit-animation: spin 2s linear infinite;
     animation: spin 2s linear infinite;
   }
@@ -52,6 +52,10 @@
     src: url("fonts/kimberle.ttf");
     font-family: body-font;
 }
+@font-face {
+  src: url("fonts/true-crimes.ttf");
+  font-family: link-font;
+}
 body {
     background-color: #2196F3;
     font-family: body-font;
@@ -68,6 +72,30 @@ body {
     margin-left: 140px;
     padding: 0px 10px;
 }
+.topnav {
+  display: none;
+  background: #1565C0;
+  overflow: hidden;
+}
+.topnav a{
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 15px;
+  font-family: link-font;
+}
+.topnav a:hover {
+  color: #00C853;
+}
+.topnav a.active {
+  color: #00C853;
+}
+.topnav .icon {
+  display: none;
+}
 .sidenav {
     width: 130px;
     position: fixed;
@@ -83,19 +111,70 @@ body {
     font-size: 15px;
     color: white;
     display: block;
+    font-family: link-font;
 }
 .sidenav a:hover {
     color: #00C853;
 }
 
+@media screen and (max-width:600px) {
+  .sidenav {
+    display: none;
+  }
+  .main {
+    margin-left: 0px;
+  }
+  .topnav {
+    display: block;
+  }
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+  .topnav.responsive {position: relative;}
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+
+.accordion {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  text-align: left;
+  border: none;
+  outline: none;
+  transition: 0.4s;
+}
+.accordion-active, .accordion:hover {
+  background-color: #ccc;
+}
+
+/* Style the accordion panel. Note: hidden by default */
+.panel {
+  padding: 0 18px;
+  max-height: 0;
+  display: none;
+  
+}
 .slideshow-container {
-    max-width: 1000px;
+    max-width: 500px;
     position: relative;
     margin: auto;
   }
   
   /* Hide the images by default */
-  .slides1 {
+  .slides1, .slides2 {
     display: none;
   }
   
@@ -123,10 +202,9 @@ body {
   
   /* On hover, add a black background color with a little bit see-through */
   .prev:hover, .next:hover {
-    background-color: rgba(0,0,0,0.8);
+    background-color: rgba(255, 255, 255, 0.5);
   }
   
-  /* Caption text */
   .captiontext {
     color: #f2f2f2;
     font-size: 15px;
@@ -136,8 +214,6 @@ body {
     width: 100%;
     text-align: center;
   }
-  
-  /* Number text (1/3 etc) */
   .numbertext {
     color: #f2f2f2;
     font-size: 12px;
@@ -145,23 +221,6 @@ body {
     position: absolute;
     top: 0;
   }
-  
-  /* The dots/bullets/indicators */
-  .dot {
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
-  }
-  
-  .active, .dot:hover {
-    background-color: #717171;
-  }
-  
   /* Fading animation */
   .fadeanim {
     -webkit-animation-name: fade;
