--- a/styles.css
+++ b/styles.css
@@ -58,8 +58,14 @@
 }
 body {
     background-color: #2196F3;
+    background: 	linear-gradient(-135deg, rgb(0, 89, 161) 10%, transparent),
+		repeating-linear-gradient(45deg, rgb(0, 132, 255) 0%, rgba(3, 44, 156, 0.6) 5%, transparent 5%, transparent 10%),
+    repeating-linear-gradient(-45deg, rgba(34, 76, 152, 0.4) 0%, rgba(31, 48, 94, 0.5) 5%, transparent 5%, transparent 10%);;
     font-family: body-font;
     display: block;
+}
+body{
+  color: white;
 }
 #home-title {
     width: 50%;
@@ -171,6 +177,7 @@ body {
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
     user-select: none;
+    background-color: gray;
   }
   
   /* Position the "next button" to the right */
@@ -181,7 +188,7 @@ body {
   
   /* On hover, add a black background color with a little bit see-through */
   .prev:hover, .next:hover {
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgb(175, 175, 175);
   }
   
   .captiontext {
