--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,7 @@ body {
 		repeating-linear-gradient(45deg, rgb(0, 132, 255) 0%, rgba(3, 44, 156, 0.6) 5%, transparent 5%, transparent 10%),
     repeating-linear-gradient(-45deg, rgba(34, 76, 152, 0.4) 0%, rgba(31, 48, 94, 0.5) 5%, transparent 5%, transparent 10%);;
     font-family: body-font;
+    background-attachment: fixed;
     display: block;
 }
 body{
