--- a/styles.css
+++ b/styles.css
@@ -84,21 +84,25 @@ body{
 {
     margin-left: 140px;
     padding: 0px 70px;
+    padding-top: 20px
 }
+.vertical-center {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
 .topnav {
   display: none;
   background: #1565C0;
-  overflow: hidden;
 }
-.topnav a{
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 15px;
-  font-family: link-font;
+.topnav a {
+  color: white;
+}
+.topnav button {
+  color: white;
 }
 .topnav a:hover {
   color: #00C853;
@@ -106,12 +110,7 @@ body{
 .topnav a.active {
   color: #00C853;
 }
-.topnav .icon {
-  display: none;
-}
-.topnav img {
-  display: inline;
-}
+
 .sidenav {
     width: 190px;
     position: fixed;
@@ -159,21 +158,6 @@ body{
   }
   #home-title-topnav {
     display: block;
-  }
-  .topnav a:not(:first-child) {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-  .topnav.responsive {position: relative;}
-  .topnav.responsive a.icon {
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
   }
   #accordion {
     padding-left: 50px;
